fix: application layout on smaller devices

--- a/front/src/scss/app.scss
+++ b/front/src/scss/app.scss
@@ -1,5 +1,6 @@
 #root {
   height: 100vh;
+  overflow-y: hidden;
   .dash-separator {
     padding: 0 0.5rem;
   }
