--- a/front/src/scss/sale/receipt.scss
+++ b/front/src/scss/sale/receipt.scss
@@ -1,6 +1,5 @@
 .receipt {
   height: 100%;
-  flex-basis: 400px;
   box-shadow: 0 0 20px 1px rgba(0,0,0,0.4);
   & > .container {
     height: 100%;
